[WIP] Support other annotations